--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
         android:text="CALCU 4 YOU"
         android:textAlignment="center"
         android:textColor="@color/black"
+        android:fontFamily="serif"
+        android:textStyle="bold"
         android:textSize="45sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +27,7 @@
 
     <EditText
         android:id="@+id/editTextNumber"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
         android:background="@drawable/insert_number"
         android:ems="10"
@@ -43,7 +45,7 @@
 
     <EditText
         android:id="@+id/editTextNumber2"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="48dp"
         android:background="@drawable/insert_number"
         android:ems="10"
@@ -61,7 +63,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="240dp"
+        android:layout_width="200dp"
         android:layout_height="33dp"
         android:background="@drawable/border"
         android:text=""
@@ -82,6 +84,7 @@
         android:layout_height="wrap_content"
         android:onClick="plus"
         android:text="+"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:background="@drawable/transparent_button"
         android:textSize="20sp"
@@ -100,6 +103,7 @@
         android:text="-"
         android:textColor="@color/black"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:background="@drawable/transparent_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,6 +121,7 @@
         android:textColor="@color/black"
         android:background="@drawable/transparent_button"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.049"
@@ -131,6 +136,7 @@
         android:onClick="divide"
         android:text="%"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:background="@drawable/transparent_button"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,6 +154,7 @@
         android:onClick="power"
         android:text="x²"
         android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -163,6 +170,7 @@
         android:background="@drawable/transparent_button"
         android:onClick="cube"
         android:text="x³"
+        android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
